--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <p>One of the key features of Use My Notes is its note-taking app, which allows users to take notes on any device, whether it's a laptop, tablet, or smartphone. The app offers a range of formatting options, including bullet points, numbered lists, and headings, which can help users organize their notes more effectively. Additionally, the app offers the ability to tag notes, which can make it easier to find specific information later.</p>
 
-<p>Use My Notes also offers a flashcard maker tool, which allows users to create flashcards based on their notes. This can be a great way to review information and test your knowledge, whether you're preparing for a test or just trying to reinforce your understanding of a particular subject.</p>
+      <p><a href="https://usemynotes.com/">Use My Notes</a> also offers a flashcard maker tool, which allows users to create flashcards based on their notes. This can be a great way to review information and test your knowledge, whether you're preparing for a test or just trying to reinforce your understanding of a particular subject.</p>
 
 <p>In addition to its note-taking and flashcard tools, UseMyNotes.com also offers a library of study guides and resources on a variety of subjects. These resources can be a great way to supplement your notes and help you better understand the material.</p>
 
