--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="author" content="Alimam Miya">
   <link rel="canonical" href="https://usemynotess.pages.dev/" />
+  <meta name="google-site-verification" content="G4OenlcwQ3DRWxk3Qqb_vLJaQ2sFpasRJym0gwqimko" />
   <meta name="description" content="Use My Notes is a website that offers a variety of tools and resources to help students, professionals, and anyone who takes notes to organize and optimize their note-taking process." /> 
     <body>
         <h1>About Use My Notes</h1>
