--- a/network-security.html
+++ b/network-security.html
@@ -96,6 +96,43 @@
 
       </body>
 
-<?php
-include('footer.php'); 
-?>
+<main id="main">   
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+      </div>
+    </div>
+    <div class="container">
+     <!-- <div>
+      <a href="https://www.technical-education.com">Home</a>&nbsp; | &nbsp;   
+      <a href="contact-us"> Contact us</a>&nbsp; | &nbsp;
+      <a href="about-us">About us</a>&nbsp; | &nbsp;
+      <a href="privacy-policy">Privacy Policy</a>&nbsp; | &nbsp;
+      <a href="terms-and-condition">Terms & Condition</a>
+      </div><br> -->
+      <!-- <div style="text-align: center; font-size: 30px; text-decoration-color: #007bff;">    
+      <a href="https://www.facebook.com/TechnicalsEducation/" target="_blank"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.instagram.com/technicalseducation/" target="_blank"><i class="fa fa-instagram"></i></a>&nbsp;&nbsp;&nbsp; 
+      <a href="https://in.pinterest.com/technicaleducatione/" target="_blank"><i class="fa fa-pinterest"></i></a>&nbsp;&nbsp;&nbsp;
+      <a href="https://twitter.com/TechnicalEduc19" target="_blank"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.linkedin.com/company/technicaleducation/" target="_blank"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+      <a href="https://www.youtube.com/channel/UCIK15YMTOzFBFCB8DrTX3LA" target="_blank"><i class="fa fa-youtube"></i></a>              
+      </div><br> -->
+      <div class="copyright">
+        &copy; <?php echo date('Y') ?> <strong>Use My Notes</strong>. All Rights Reserved
+      </div>
+   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+   </div>
+</footer>
+</main>
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/wow/wow.min.js"></script>
+  <script src="lib/waypoints/waypoints.min.js"></script>
+  <script src="lib/counterup/counterup.min.js"></script>
+  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+</html>
