--- a/directory-submission-sites-list.html
+++ b/directory-submission-sites-list.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>What is Data Encryption Standard Algorithm?</title>
+  <title>Directory submission site list</title>
   <meta charset="UTF-8">  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="author" content="Alimam Miya">
-  <link rel="canonical" href="https://usemynotess.pages.dev/des-algorithm" />
+  <link rel="canonical" href="https://usemynotess.pages.dev/directory-submission-sites-list" />
   <meta name="google-site-verification" content="G4OenlcwQ3DRWxk3Qqb_vLJaQ2sFpasRJym0gwqimko" />
-  <meta name="description" content="The Data Encryption Standard (DES) is a symmetric-key encryption algorithm used to encrypt and decrypt electronic data. It was developed by IBM in the 1970s and was adopted by the U.S. government as an official standard in 1976." /> 
+  <meta name="description" content="This is a Directory submission site list you can get the backlinks and improve your search engine visiblity" /> 
     <body>
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -37,12 +37,19 @@
   </header>  
   <section id="hero">
     <div class="hero-container">
-      <h1>What is Data Encryption Standard Algorithm?</h1>   
+      <h1>Directory submission site list</h1>   
     </div>
 </section><br/>
 <section id="why-us" class="wow fadeIn">
       <div class="container">  
         <!-- common header end-->
+        <h2>What is Directory submission</h2>
+        <p>Directory submission is an off-page SEO technique where you submit your website's URL to online directories that categorize websites based on their content, niche, location, and other parameters. The objective of directory submission is to improve the visibility and online presence of your website by creating backlinks from authoritative directories.</p>
+
+<p>When you submit your website's URL to directories, you provide details like the website's title, description, keywords, and other relevant information to help the directory's editor categorize your website correctly. Once your website is approved and listed in the directory, it creates a backlink to your website, which can help improve your website's search engine ranking.</p>
+
+<p>Directory submission used to be a popular SEO strategy in the past, but its effectiveness has reduced over time as search engines have become more sophisticated in their algorithms. Nowadays, submitting to high-quality directories can still be beneficial as part of a broader SEO strategy, but it should not be the only tactic used for SEO.</p>
+        <h2> The list of Directory Submission site list</h2>     
 <a href="http://images.google.de/url?q=https://usemynotes.com" target="_blank">http://images.google.de/url?q=https://usemynotes.com</a></ br>
 <a href="http://images.google.rs/url?sa=t&url=https%3A%2F%2Fusemynotes.com%2F" target="_blank">http://images.google.rs/url?sa=t&url=https%3A%2F%2Fusemynotes.com%2F</a></ br>
 <a href="http://images.google.co.il/url?sa=t&url=https%3A%2F%2Fusemynotes.com%2F" target="_blank">http://images.google.co.il/url?sa=t&url=https%3A%2F%2Fusemynotes.com%2F</a></ br>
