--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">      
-          <li><a href="https://usemynotess.pages.dev/">Home</a></li>     
-         <li><a href="https://usemynotess.pages.dev/network-security">Network Security</a></li>
+          <li><a href="https://usemynotess.pages.dev/">Home</a></li>  
+          <li><a href="https://usemynotess.pages.dev/network-security">Network Security</a></li>  
+          <li><a href="https://usemynotess.pages.dev/des-algorithm">DES</a></li>  
+          <li><a href="https://usemynotess.pages.dev/java-programming">Java</a></li>  
+          <li><a href="https://usemynotess.pages.dev/javascript-course">JavaScript</a></li>  
+          <li><a href="https://usemynotess.pages.dev/c-programming">C Programming</a></li>  
          <!--   <li><a href="old-paper/old-paper">Old Papers</a></li> 
           <li><a href="tutorials/index">Tutorials</a></li>
           <li><a href="contact-us">Contact Us</a></li>
