--- a/javascript-course.html
+++ b/javascript-course.html
@@ -123,9 +123,10 @@ This is the complete JavaScript course provided by <a href="https://usemynotes.c
   <li>If you want to get started with programming, take this course: JavaScript is a great first language!</li>
 </ul>
 
-      </body>
-
-<main id="main">   
+</div>
+</section>
+</body>
+  <main id="main">   
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
