--- a/c-programming.html
+++ b/c-programming.html
@@ -98,6 +98,8 @@
 <p>If you want to be a better developer, C is a great way to start learning!</p>
 <p>It does not skip over the course description. You will learn how to write high-quality code and how to be an excellent problem solver. This course does not only exist to code in the C programming language but, includes all the details on the "why" you are doing. At the end of this course, you will be able to fully understand the concepts of the C programming language.</p>
 
+</div>
+</section>
 </body>
 <main id="main">   
   <footer id="footer">
