--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <a href="https://www.youtube.com/channel/UCIK15YMTOzFBFCB8DrTX3LA" target="_blank"><i class="fa fa-youtube"></i></a>              
       </div><br> -->
       <div class="copyright">
+        <a href="https://usemynotess.pages.dev/page">Page</a> | <a href="https://usemynotess.pages.dev/page1">Page 1</a>
         &copy; <?php echo date('Y') ?> <strong>Use My Notes</strong>. All Rights Reserved
       </div>
    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
