--- a/index.html
+++ b/index.html
@@ -83,7 +83,57 @@
       </div><br> -->
       <div class="copyright">
         <a href="https://usemynotess.pages.dev/page">Page</a> | <a href="https://usemynotess.pages.dev/page1">Page 1</a>
-        &copy; <?php echo date('Y') ?> <strong>Use My Notes</strong>. All Rights Reserved
+         | <a href="https://usemynotess.pages.dev/page2">Page 2</a>
+         | <a href="https://usemynotess.pages.dev/page3">Page 3</a>
+         | <a href="https://usemynotess.pages.dev/page4">Page 4</a>
+         | <a href="https://usemynotess.pages.dev/page5">Page 5</a>
+        | <a href="https://usemynotess.pages.dev/page6">Page 6</a>
+        | <a href="https://usemynotess.pages.dev/page7">Page 7</a>
+        | <a href="https://usemynotess.pages.dev/page8">Page 8</a>
+        | <a href="https://usemynotess.pages.dev/page9">Page 9</a>
+        | <a href="https://usemynotess.pages.dev/page10">Page 10</a>
+        | <a href="https://usemynotess.pages.dev/page11">Page 11</a>
+        | <a href="https://usemynotess.pages.dev/page12">Page 12</a>
+        | <a href="https://usemynotess.pages.dev/page13">Page 13</a>
+        | <a href="https://usemynotess.pages.dev/page14">Page 14</a>
+        | <a href="https://usemynotess.pages.dev/page15">Page 15</a>
+        | <a href="https://usemynotess.pages.dev/page16">Page 16</a>
+        | <a href="https://usemynotess.pages.dev/page17">Page 17</a>
+        | <a href="https://usemynotess.pages.dev/page18">Page 18</a>
+        | <a href="https://usemynotess.pages.dev/page19">Page 19</a>
+        | <a href="https://usemynotess.pages.dev/page20">Page 20</a>
+        | <a href="https://usemynotess.pages.dev/page21">Page 21</a>
+        | <a href="https://usemynotess.pages.dev/page22">Page 22</a>
+        | <a href="https://usemynotess.pages.dev/page23">Page 23</a>
+        | <a href="https://usemynotess.pages.dev/page24">Page 24</a>
+        | <a href="https://usemynotess.pages.dev/page25">Page 25</a>
+        | <a href="https://usemynotess.pages.dev/page26">Page 26</a>
+        | <a href="https://usemynotess.pages.dev/page27">Page 27</a>
+        | <a href="https://usemynotess.pages.dev/page28">Page 28</a>
+        | <a href="https://usemynotess.pages.dev/page29">Page 29</a>
+        | <a href="https://usemynotess.pages.dev/page30">Page 30</a>
+        | <a href="https://usemynotess.pages.dev/page31">Page 31</a>
+        | <a href="https://usemynotess.pages.dev/page32">Page 32</a>
+        | <a href="https://usemynotess.pages.dev/page33">Page 33</a>
+        | <a href="https://usemynotess.pages.dev/page34">Page 34</a>
+        | <a href="https://usemynotess.pages.dev/page35">Page 35</a>
+        | <a href="https://usemynotess.pages.dev/page36">Page 36</a>
+        | <a href="https://usemynotess.pages.dev/page37">Page 37</a>
+        | <a href="https://usemynotess.pages.dev/page38">Page 38</a>
+        | <a href="https://usemynotess.pages.dev/page39">Page 39</a>
+        | <a href="https://usemynotess.pages.dev/page40">Page 40</a>
+        | <a href="https://usemynotess.pages.dev/page41">Page 41</a>
+        | <a href="https://usemynotess.pages.dev/page42">Page 42</a>
+        | <a href="https://usemynotess.pages.dev/page43">Page 43</a>
+        | <a href="https://usemynotess.pages.dev/page44">Page 44</a>
+        | <a href="https://usemynotess.pages.dev/page45">Page 45</a>
+        | <a href="https://usemynotess.pages.dev/page46">Page 46</a>
+        | <a href="https://usemynotess.pages.dev/page47">Page 47</a>
+        | <a href="https://usemynotess.pages.dev/page48">Page 48</a>
+        | <a href="https://usemynotess.pages.dev/page49">Page 49</a>
+        | <a href="https://usemynotess.pages.dev/page50">Page 50</a>
+
+      </br>&copy; <?php echo date('Y') ?> <strong>Use My Notes</strong>. All Rights Reserved
       </div>
    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
    </div>
