--- a/wiki-submission-site-list.html
+++ b/wiki-submission-site-list.html
@@ -88,7 +88,7 @@
 <a href="https://eduardohbjo10987.wikipresses.com/3539461/about_use_my_notes" target="_blank">https://eduardohbjo10987.wikipresses.com/3539461/about_use_my_notes</a></br>
 <a href="https://rylankuxz95184.wikitelevisions.com/5608471/about_use_my_notes" target="_blank">https://rylankuxz95184.wikitelevisions.com/5608471/about_use_my_notes</a></br>
 <a href="https://miloeqaf30863.wikiinside.com/5846/about_use_my_notes" target="_blank">https://miloeqaf30863.wikiinside.com/5846/about_use_my_notes</a></br>
-<a href="https://waylonveij29528.wikimidpoint.com/3261336/about_use_my_notes" target="_blank">https://waylonveij29528.wikimidpoint.com/3261336/about_use_my_notes</a</br>
+<a href="https://waylonveij29528.wikimidpoint.com/3261336/about_use_my_notes" target="_blank">https://waylonveij29528.wikimidpoint.com/3261336/about_use_my_notes</a></br>
 <a href="https://donovaniftg05826.wikicorrespondent.com/4793581/about_use_my_notes" target="_blank">https://donovaniftg05826.wikicorrespondent.com/4793581/about_use_my_notes</a></br>
 <a href="https://cesarodvi25803.wikijournalist.com/3837760/about_use_my_notes" target="_blank">https://cesarodvi25803.wikijournalist.com/3837760/about_use_my_notes</a></br>
 <a href="https://archerushs59471.wikinewspaper.com/2294366/about_use_my_notes" target="_blank">https://archerushs59471.wikinewspaper.com/2294366/about_use_my_notes</a></br>
