--- a/moral-stories-in-hindi.html
+++ b/moral-stories-in-hindi.html
@@ -56,7 +56,9 @@
 
 <h2 dir="auto">समापन:</h2>
 <p dir="auto">ये कहानियाँ हमें नैतिक शिक्षा और सही मार्गदर्शन करने में सहारा प्रदान करती हैं। इन्हें सुनकर हम अच्छे और सजग नागरिक बनते हैं और अपने आस-पास के समाज को भी सुधारने का संकल्प लेते हैं। नैतिक कहानियों के माध्यम से हम अपने बच्चों और समाज को भी सबक सिखा सकते हैं, ताकि हमारी समृद्धि और तरक्की का मार्ग सही दिशा में हो।</p>
-      </body>
+    </div>
+</section>
+    </body>
 
 <main id="main">   
   <footer id="footer">
